# Ivynet

./: .env.template  .gitignore  .pre-commit-config.yaml  :qa  Cargo.toml  PreCommit.md  README.md  avs-compose.yaml  backend-compose.yaml  docker-compose.yaml  makefile  rustfmt.toml  scratch.json  testing-compose.yaml
api/: .env.example  Cargo.toml
api/fixtures/: setup_altlayer_node_data_versions.sql
api/src/: config.rs  error.rs  lib.rs  main.rs
backend/: Cargo.toml  README.md  backend-compose.yaml  build.rs  clean-reboot-backend.sh  docker-compose.yaml  testing-setup.sh
backend/.sqlx/: query-001618967ba78452a349badc28dcd1250e18de588265041018c07e250901c641.json  query-00cecca531b22ae0a5f4dde6bd2d21e5caa0ddf8acb58057f0c4df89d0834e51.json  query-00e2420e5a4632ced6d311a121bba2ab015eab73dacaf8a690b87bf6637d5b3c.json  query-05d9ab9693faa92b116bb3191c0f8e7a707350aff520e87f40a5f4fc87b94f40.json  query-08fb38f259ba1ecd5c5ad32d045ea35a869c9b3274599ceb22676d13a7fca29d.json  query-0d2d50f18b9d63c8b68b0e6f3cf3f43e48fce1135e860abee7b50a86518429fb.json  query-0df71b3cc4951d2b91624c2801c5d1d7e11e7bf2910dce2ccecf1d16ed2c8d0c.json  query-0eb13cc1a9daa0f76fe0510842f9c14f5c0f985d2acde3fb80457a292d9b9cd6.json  query-1362a827c4e6f99e080be74874fd43e54af00b0fa63a2584a73863cd18bbe3ab.json  query-145bb03c86a1ccf308bafec2e9125b2fd9a39408f17950db4e57f7dd3156c42a.json  query-156207063c5cb910238a86a9b4d09074d5c0b9a9006f9f6b8a84391696fab532.json  query-18eaa00a7315cb0aca21e01cb573ad4eb2bad65d4f53eeb8db7ac8b2334be84f.json  query-1943aca053514caaf95a278119c318b15b8ab675e75c9ee48566a5b4d85e756c.json  query-19b4a06cbfb1f2b406816078d902168b796e2a1deb2252dac6abaceb15f7ed7a.json  query-1ccf09db9473387476ae9e0405d70e44b37cd934cbac5adbed298ed7605425f8.json  query-1debd9dcbefc5485720dcc1be16ff51171272286bafb2cc4a266ad1f4b13da51.json  query-2037309376b3a1e124be716fd996864e0661f773ab433293aa53f1593b27d93c.json  query-2135b4f6de6011797e31742b0ba81d33994deedae87ba80dae0bb9e56b467bae.json  query-24fa92214ec163fda98bb5f1fc76a2f7ef3852f60991cb66559fb5acc89dec09.json  query-26c48b01a84fd80bb85774700840a87340f71118569af05392c4cf03ad1ee4c5.json  query-28cd9fab25b5cffe192c6f316e0134d975e2e41fd87ba67cec09a764939ece10.json  query-2bffc5a4901b8c7ff005d1f34862371c76d3d03839242bc32cc5b0fd524e1d8d.json  query-31dd389c927fffcd125a85987a146d892419ca642685c1d313a60ad161d7e448.json  query-3b9dd915fa20638bd7cee92dfbe213321fd83a1186b2b9d5506379308453a764.json  query-3bdff5214797d990e60d2aa0238967da38c58bda72c5668ce308dd3bdd108347.json  query-3c17be6e7719c475ed153ba266de9259b8c9899ff76df2dc0ea7eb067c1dacfa.json  query-3c9acfa59aa8868924d5d195e4cbdcbee8e8ea4440f946a8184b83407484f140.json  query-3caec552f42aaff227ac7e0959c519f9b3aa8744d37094322780de11f3e7713b.json  query-45ea17594c542d616cb1537bc869537a53c45a28c27ac09ea7e02ba639d0be73.json  query-46036c48f52651fc59c16e8a3978225585e28ce57f91c131bb51ebf5bbdfdec5.json  query-465ce4ac82675ddde3423af73d4950893d9a97947e19efab5b029f5d5d233034.json  query-484854bdf89e74651dc5ab6de104230db31de1ae3199e2bd46f6f45771ed856d.json  query-4afa16b931408a83d6c6c5964060d23a176853651680e20c387d9edfb72a4a42.json  query-4e6431810a505546861fcc6063b1d43f013b41cab93de1092fb15b08f369fd5f.json  query-4fd95115153f7ff02bfc7f795dd0c8e2d7f9d7db44ff3c91765b0cec32d72c4c.json  query-505d5b2b2fe43f4179abee65a9ee1640092ccf2c42f0911c30fc25bf5fda8b26.json  query-50e0e5a8f75f535d3b3619b54b7b5a47b8904a5b3717bb5c63230e9a53ffa8b7.json  query-52bd8a86738b11b0dd441150301d0aee673ed6eeea0f4e260e296106f07ec807.json  query-5470dd9b4c658233ab1e99c7d196b33028ce922be63340c2a2b61a36cc980f9b.json  query-5929c8063ff9687fde6518fd17f9032dd20a19e32ca2024e6eb79779a560c476.json  (+98 more)
backend/fixtures/: avs_version_hashes.sql  node.sql  setup_altlayer_node_data_versions.sql  test_user.sql
backend/migrations/: 20240607184342_node.sql  20240722172247_metrics.sql  20240930144633_node_name.sql  20241004182519_node_data.sql  20241010212503_update_node_data.sql  20241014152852_logs.sql  20241106211350_avs_version_data.sql  20241106211350_update_avs_data.sql  20241107125608_client.sql  20241107130001_drop_node.sql  20241107130059_node.sql  20241108123819_log.sql  20241119192604_avs_type.sql  20241119200042_version_node_type.sql  20241124215413_avs_version.sql  20241125152626_eigenda_versions.sql  20241125174923_avs_chain.sql  20241125183204_operator_keys.sql  20241126190758_avs_version_hash.sql  20241203181449_avs_active_set.sql  20241210125611_avs_active_set_collection.sql  20241216170429_unique_operator_keys.sql  20241220072736_avs_hash_index.sql  20241220172740_avs_metrics_available.sql  20250110165236_update_avs_name_cascade.sql  20250110220418_update_avs_name_cascade.sql  20250114232958_logs_improvement.sql  20250116191218_partion_logs_table.sql  20250116191226_copy_old_logs.sql  20250116194538_overwrite_old_create_partition.sql
backend/migrations_await/: 20250116191218_partion_logs_table.sql  20250116191226_copy_old_logs.sql
backend/scripts/: clean-reboot-backend-simple.sh  clean-reboot-backend.sh  get_version_hashes.sh  get_version_hashes_new.sh  scripts_readme.md
backend/src/: config.rs  data.rs  error.rs  lib.rs  main.rs
cli/: Cargo.toml  README.md
cli/src/: avs.rs  commands.rs  config.rs  error.rs  init.rs  inspect.rs  ivy_machine.rs  key.rs  keys.rs  lib.rs  log_forwarder.rs  main.rs  messenger.rs  metadata.rs  monitor.rs  node_source.rs  operator.rs  service.rs  (+3 more)
core/: Cargo.toml  README.md  build.rs  testing-chart.md
database/: Cargo.toml
db/: Cargo.toml
heartbeat/: Cargo.toml
ingress/: .env.example  Cargo.toml
ivy-cli/: Cargo.toml
ivy-core/: Cargo.toml
ivynet-alerts/: Cargo.toml
ivynet-cli/: Cargo.toml  README.md
ivynet-core/: Cargo.toml  build.rs
ivynet-database/: Cargo.toml
ivynet-docker/: Cargo.toml
ivynet-docker-registry/: Cargo.toml
ivynet-error/: Cargo.toml
ivynet-grpc/: Cargo.toml  build.rs
ivynet-heartbeat/: Cargo.toml
ivynet-io/: Cargo.toml
ivynet-node-type/: Cargo.toml
ivynet-notifications/: Cargo.toml  readme.md
ivynet-signer/: Cargo.toml
scraper/: Cargo.toml  README.md  build.rs
(+1063 files in other folders)
