[workspace]
members = [
	"cli",
	"core",
	"macros",
	"backend",
	"scraper",
	"ivynet-docker",
	"ivynet-node-type",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
repository = "https://github.com/ivy-net/ivynet"
categories = ["cryptography::cryptocurrencies"]
license = "UNLICENSED"

[workspace.lints.clippy]
# Duplicated from Reth - Reth has more enabled but lists them as experimental so
# we're not enabling them here.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

[workspace.dependencies]
# Local packages
ivynet-docker = { path = "ivynet-docker" }
ivynet-node-type = { path = "ivynet-node-type" }

bollard = "0.18.0"
convert_case = "0.6.0"
chrono = "0.4.0"
docker-registry = "0.7.0"
futures = "0.3.31"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = "0.1.40"
which = "7.0"
