[workspace]
members = [
	"cli",
	"core",
	"macros",
	"backend",
	"scraper",
	"ivynet-docker",
	"ivynet-docker-registry",
	"ivynet-grpc",
	"ivynet-io",
	"ivynet-node-type",
    "ivynet-notifications",
	"ivynet-signer",
	"db",
	"ingress",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/ivy-net/ivynet"
categories = ["cryptography::cryptocurrencies"]
license = "UNLICENSED"

[workspace.lints.clippy]
# Duplicated from Reth - Reth has more enabled but lists them as experimental so
# we're not enabling them here.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

[workspace.dependencies]
# Local packages
ivynet-core = { path = "core" }
ivynet-docker = { path = "ivynet-docker" }
ivynet-docker-registry = { path = "ivynet-docker-registry" }
ivynet-grpc = { path = "ivynet-grpc" }
ivynet-io = { path = "ivynet-io" }
ivynet-node-type = { path = "ivynet-node-type" }
ivynet-signer = { path = "ivynet-signer" }

#grpc
prost = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-reflection = "0.12"

anyhow = "1.0"
async-trait = "0.1.80"
blsful = "2.5.7"
bollard = "0.17.1"
convert_case = "0.6.0"
chrono = "0.4.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
docker-registry = "0.7.0"
ethers = { version = "2.0", features = ["ws", "abigen"] }
futures = "0.3.31"
eth-keystore = "0.5.0"
once_cell = "1.20.2"
prost-build = "0.13"
prost-wkt-build = "0.6"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
sqlx = { version = "0.8", features = [
	"postgres",
	"chrono",
	"runtime-tokio",
	"tls-rustls",
	"uuid",
] }
strum = { version = "0.26.3", features = ["derive"] }
tar = "0.4.43"
tempfile = "3.10.1"
thiserror = "2.0.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
toml = "0.8.15"
tonic-build = "0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["v4", "v5", "serde"] }
which = "7.0"
zip = "2.1.3"
