[workspace]
members = [
	#Binaries
	"cli",
	"api",
	"scanner",
	"ingress",
	#Crates
	"ivynet-database",
	"ivynet-macros",
	"ivynet-docker",
	"ivynet-docker-registry",
	"ivynet-grpc",
	"ivynet-heartbeat",
	"ivynet-io",
	"ivynet-node-type",
	"ivynet-notifications",
	"ivynet-signer",
	"ivynet-error",
	"ivynet-alerts",
	"ivynet-heartbeat",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
repository = "https://github.com/ivy-net/ivynet"
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"

[workspace.lints.clippy]
# Duplicated from Reth - Reth has more enabled but lists them as experimental so
# we're not enabling them here.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

[workspace.dependencies]
# Local packages
ivynet-alerts = { path = "ivynet-alerts" }
ivynet-database = { path = "ivynet-database" }
ivynet-docker = { path = "ivynet-docker" }
ivynet-docker-registry = { path = "ivynet-docker-registry" }
ivynet-error = { path = "ivynet-error" }
ivynet-grpc = { path = "ivynet-grpc" }
ivynet-heartbeat = { path = "ivynet-heartbeat" }
ivynet-io = { path = "ivynet-io" }
ivynet-node-type = { path = "ivynet-node-type" }
ivynet-notifications = { path = "ivynet-notifications" }
ivynet-macros = { path = "ivynet-macros" }
ivynet-signer = { path = "ivynet-signer" }

#grpc
prost = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-reflection = "0.12"

anyhow = "1.0"
async-trait = "0.1.80"
blsful = "2.5.7"
bollard = "0.17.1"
convert_case = "0.6.0"
chrono = "0.4.40"
dialoguer = "0.11.0"
dirs = "5.0.1"
docker-registry = "0.7.0"
dotenvy = "0.15.7"
eth-keystore = "0.5.0"
ethers = { version = "2.0", features = ["ws", "abigen"] }
futures = "0.3.31"
kameo = "0.14.0"
once_cell = "1.20.2"
prost-build = "0.13"
prost-wkt-build = "0.6"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.33"
sqlx = { version = "0.8", features = [
	"postgres",
	"chrono",
	"runtime-tokio",
	"tls-rustls",
	"uuid",
] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tar = "0.4.43"
tempfile = "3.10.1"
thiserror = "2.0.3"
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
toml = "0.8.15"
tonic-build = "0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["v4", "v5", "serde"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
which = "7.0"
zip = "2.4.1"
