[package]
name = "api"
version = "0.6.0"
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ivynet-api"
path = "src/main.rs"

[dependencies]
# IvyNet crates
ivynet-database.workspace = true
ivynet-docker-registry.workspace = true
ivynet-grpc.workspace = true
ivynet-node-type.workspace = true
ivynet-alerts.workspace = true

# External crates
axum = { version = "0.7", features = ["http2", "macros", "multipart"] }
clap = { version = "4.5", features = ["derive", "env"] }
ethers.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx.workspace = true
thiserror = "2.0"
tokio = { version = "1.38", features = [
	"full",
	"sync",
	"rt",
	"macros",
	"rt-multi-thread",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4"
memcache = "0.18.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
sendgrid = "0.23.0"
strum.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
base64 = "0.22.1"
tower-http = { version = "0.6.1", features = ["cors"] }
futures = "0.3.31"
rayon = "1.10.0"
