[package]
name = "ivynet-backend"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2", "macros", "multipart"] }
clap = { version = "4.5", features = ["derive", "env"] }
ivynet-core = { path = "../core/" }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full", "sync", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = "0.4"
sha256 = "1.5"
memcache = "0.17.2"
axum-extra = { version = "0.9.3", features = ["cookie"] }
sendgrid = "0.21.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
base64 = "0.22.1"
url = "2.5.2"
