[package]
name = "ivynet-backend"
version = "0.4.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2", "macros", "multipart"] }
clap = { version = "4.5", features = ["derive", "env"] }
ivynet-core = { path = "../core/" }
ivynet-node-type.workspace = true
ivynet-docker.workspace = true
db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx.workspace = true
thiserror = "2.0"
tokio = { version = "1.38", features = [
	"full",
	"sync",
	"rt",
	"macros",
	"rt-multi-thread",
] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4"
memcache = "0.17.2"
axum-extra = { version = "0.9.3", features = ["cookie"] }
sendgrid = "0.23.0"
strum.workspace = true
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
base64 = "0.22.1"
tower-http = { version = "0.6.1", features = ["cors"] }
futures = "0.3.31"
rayon = "1.10.0"
