[package]
name = "ivynet-backend"
version = "0.5.0"
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2", "macros", "multipart"] }
clap = { version = "4.5", features = ["derive", "env"] }
db = { path = "../db" }
ethers.workspace = true
ivynet-core = { path = "../core/" }
ivynet-docker-registry.workspace = true
ivynet-grpc.workspace = true
ivynet-node-type.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx.workspace = true
thiserror = "2.0"
tokio = { version = "1.38", features = [
	"full",
	"sync",
	"rt",
	"macros",
	"rt-multi-thread",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4"
memcache = "0.17.2"
axum-extra = { version = "0.9.3", features = ["cookie"] }
sendgrid = "0.23.0"
strum.workspace = true
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
base64 = "0.22.1"
tower-http = { version = "0.6.1", features = ["cors"] }
futures = "0.3.31"
rayon = "1.10.0"
