[package]
name = "cli"
version = "0.3.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "CLI for Ivynet client"
keywords = ["cli", "tool"]
repository = "https://github.com/ivy-net/ivynet"
default-run = "ivynet"
license = "UNLICENSED"

[[bin]]
name = "ivynet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ivynet-core = { path = "../core" }
thiserror = "2.0"
dialoguer = "0.11.0"
anyhow = "1.0.86"
linemux = "=0.3.0"
rustix = { version = "0.38", default-features = false, features = ["system"] }
data-encoding = "2.6.0"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }

[features]
docker_tests = []

[dev-dependencies]
serial_test = "3.1.1"
