[package]
name = "cli"
version = "0.5.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "CLI for Ivynet client"
keywords = ["cli", "tool"]
repository = "https://github.com/ivy-net/ivynet"
default-run = "ivynet"
license = "UNLICENSED"

[[bin]]
name = "ivynet"
path = "src/main.rs"

[dependencies]
#locals
ivynet-docker.workspace = true
ivynet-grpc.workspace = true
ivynet-io.workspace = true
ivynet-signer.workspace = true

bollard.workspace = true
clap = { version = "4.5.7", features = ["derive", "env"] }
dirs.workspace = true
ethers.workspace = true
once_cell.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dialoguer.workspace = true
anyhow.workspace = true
linemux = "=0.3.0"
reqwest.workspace = true
rustix = { version = "0.38", default-features = false, features = ["system"] }
data-encoding = "2.6.0"
futures.workspace = true
serde.workspace = true
sysinfo = "0.33"
uuid.workspace = true

[features]
docker_tests = []

[dev-dependencies]
serial_test = "3.1.1"
