[package]
name = "cli"
version = "0.6.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "CLI for Ivynet client"
keywords = ["cli", "tool"]
repository = "https://github.com/ivy-net/ivynet"
default-run = "ivynet"
license = "Apache-2.0"

[[bin]]
name = "ivynet"
path = "src/main.rs"

[dependencies]
#locals
ivynet-docker.workspace = true
ivynet-grpc.workspace = true
ivynet-io.workspace = true
ivynet-signer.workspace = true

anyhow.workspace = true
bollard.workspace = true
clap = { version = "4.5.7", features = ["derive", "env"] }
convert_case.workspace = true
data-encoding = "2.6.0"
dialoguer.workspace = true
dirs.workspace = true
ethers.workspace = true
fs2 = "0.4.3"
futures.workspace = true
kameo.workspace = true
linemux = "=0.3.0"
once_cell.workspace = true
reqwest.workspace = true
rustix = { version = "1.0", default-features = false, features = ["system"] }
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.33"
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
docker_tests = []

[dev-dependencies]
serial_test = "3.1.1"
toml = "0.8"
sqlx.workspace = true
