[package]
name = "db"
version.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", features = [
	"postgres",
	"chrono",
	"runtime-tokio",
	"tls-rustls",
	"uuid",
	"bigdecimal",
] }
ivynet-core = { path = "../core" }
chrono.workspace = true
serde.workspace = true
uuid = { version = "1.11.0", features = ["v4", "serde"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
sha256 = "1.5.0"
thiserror.workspace = true
ivynet-node-type.workspace = true
ivynet-docker.workspace = true
ivynet-grpc.workspace = true
semver = "1.0.24"
serde_json.workspace = true
regex.workspace = true

[lints]
workspace = true

[features]
db_tests = []
