[package]
name = "ingress"
version = "0.6.0"
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "ivynet-ingress"
path = "src/main.rs"

[dependencies]
# IvyNet crates
ivynet-docker.workspace = true
ivynet-docker-registry.workspace = true
ivynet-grpc.workspace = true
ivynet-node-type.workspace = true
ivynet-signer.workspace = true
ivynet-error.workspace = true
ivynet-database.workspace = true
ivynet-notifications.workspace = true

# External crates
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx = { version = "0.8.3", features = [
	"postgres",
	"chrono",
	"runtime-tokio",
	"tls-rustls",
	"uuid",
	"bigdecimal",
] }
reqwest.workspace = true
serde_json.workspace = true
ivynet-heartbeat.workspace = true

[dev-dependencies]
ivynet-notifications.workspace = true

[lints]
workspace = true
