[package]
name = "ivy-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "ivy-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.197"
serde_derive = "1.0.197"
ethers-core = "2.0.14"
hex = "0.4.3"
tokio = { version = "1.37.0", features = ["full"] }
ivy-core = { path = "../ivy-core" }
