[package]
name = "ivynet-alerts"
version.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ethers.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
utoipa.workspace = true
serde_json.workspace = true

[dev-dependencies]

[lints]
workspace = true
