[package]
name = "ivynet-alerts"
version.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
uuid.workspace = true
utoipa.workspace = true

[dev-dependencies]

[lints]
workspace = true
