[package]
name = "ivynet-cli"
version = "0.1.0"
edition = "2021"
authors = ["Noah Foltz <noahfoltz5@gmail.com>"]
description = "CLI for Ivynet client"
keywords = ["cli", "tool"]
repository = "https://github.com/ivy-net/ivynet"
license = "AGPL-3.0"

[[bin]]
name = "ivynet-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ivynet-core = { path = "../ivynet-core" }
thiserror = "1.0"
dialoguer = "0.11.0"
