[package]
name = "ivynet-core"
version = "0.1.0"
edition = "2021"
authors = ["Noah Foltz <noahfoltz5@gmail.com>"]
description = "Core library for Ivynet client functionality"
repository = "https://github.com/ivy-net/ivynet"
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true


[dependencies]
futures-util = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
dialoguer = "0.11.0"
dirs = "5.0.1"
ethers-contract = "2.0.14"
ethers-core = "2.0.14"
ethers-middleware = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
hex = "0.4.3"
indicatif = "0.17.8"
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["stream"] }
secp256k1 = { version = "0.29.0", features = ["rand", "rand-std"] }
serde = "1.0.197"
serde_derive = "1.0.197"
sysinfo = "0.30.11"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
zip = "1.1.2"
