[package]
name = "ivynet-core"
version = "0.1.0"
edition = "2021"
authors = ["Noah Foltz <noahfoltz5@gmail.com>"]
description = "Core library for Ivynet client functionality"
repository = "https://github.com/ivy-net/ivynet"
license = "AGPL-3.0"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
futures-util = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
ethers = "2.0"
indicatif = "0.17.8"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"]}
sysinfo = "0.30.11"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
zip = "2.1.2"
url = { version = "2.5.0", features = ["serde"] }
chrono = "0.4"
async-trait = "0.1.80"
ivynet-macros = { path = "../ivynet-macros" }
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.11"

[build-dependencies]
prost-build = "0.12"
prost-wkt-build = "0.5"
tonic-build = "0.11"
