[package]
name = "ivynet-database"
version.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", features = [
	"postgres",
	"chrono",
	"runtime-tokio",
	"tls-rustls",
	"uuid",
	"bigdecimal",
] }
alerts.workspace = true
ivynet-error.workspace = true
ivynet-node-type.workspace = true
ivynet-notifications.workspace = true
ivynet-docker-registry.workspace = true
ivynet-grpc.workspace = true
tonic.workspace = true
chrono.workspace = true
regex.workspace = true
sha256 = "1.6.0"
semver = "1.0.24"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid = { version = "1.11.0", features = ["v4", "serde"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
ethers.workspace = true

[lints]
workspace = true

[features]
db_tests = []

[build-dependencies]
prost-build.workspace = true
prost-wkt-build.workspace = true
tonic-build.workspace = true
