[package]
name = "ivynet-docker"
version = "0.1.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "Docker library for IvyNet node detection and management"
repository = "https://github.com/ivy-net/ivynet"
license = "UNLICENSED"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
#locals
ivynet-node-type.workspace = true

bollard.workspace = true
chrono.workspace = true
docker-registry.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
regex.workspace = true
which.workspace = true

[dev-dependencies]
mockall = "0.13.1"
async-trait = "0.1.85"
