[package]
name = "ivynet-docker"
version = "0.6.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "Docker library for IvyNet node detection and management"
repository = "https://github.com/ivy-net/ivynet"
license = "UNLICENSED"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
#locals
async-trait.workspace = true
bollard.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
regex.workspace = true
which.workspace = true
hex = "0.4.3"

[dev-dependencies]
mockall = "0.13.1"
testcontainers = "0.23.1"
