[package]
name = "ivynet-error"
version = "0.6.0"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "Core library for Ivynet client functionality"
repository = "https://github.com/ivy-net/ivynet"
license = "UNLICENSED"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
#locals
ivynet-signer.workspace = true

thiserror.workspace = true
ethers.workspace = true
