[package]
name = "ivynet-node-type"
version = "0.1.10"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "Library for supported node types"
repository = "https://github.com/ivy-net/ivynet"
license = "UNLICENSED"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
convert_case.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
