[package]
name = "ivynet-node-type"
version = "0.5.1"
edition = "2021"
authors = ["Noah Foltz <noah@ivynet.dev>"]
description = "Library for supported node types"
repository = "https://github.com/ivy-net/ivynet"
license = "UNLICENSED"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
convert_case.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
